Flip Active/Selected Bone does not work in weight paint mode. #60689

Closed
opened 2019-01-20 22:51:11 +01:00 by Demeter Dzadik · 12 comments
Member

Blender Version
Broken: 2.80, dcf520cdad, 2019-07-01
Worked: 2.79

Description
"Flip Active/Selected Bone" (bpy.ops.pose.select_mirror()) - Currently does not work in weight paint mode.

Exact steps for others to reproduce the error
ctrl_shift_m_why.blend
In attached blend, try Ctrl+Shift+M. The selected bone should flip from bone.l to bone.r but it doesn't.

**Blender Version** Broken: 2.80, dcf520cdad79, 2019-07-01 Worked: 2.79 **Description** "Flip Active/Selected Bone" (`bpy.ops.pose.select_mirror()`) - Currently does not work in weight paint mode. **Exact steps for others to reproduce the error** [ctrl_shift_m_why.blend](https://archive.blender.org/developer/F6349721/ctrl_shift_m_why.blend) In attached blend, try Ctrl+Shift+M. The selected bone should flip from bone.l to bone.r but it doesn't.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Will take a look.

Will take a look.
Member
[D4232](https://archive.blender.org/developer/D4232)

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2019-07-01 20:53:25 +02:00

The problem is that the data->object_type in this case is OB_MESH instead of OB_ARMATURE.
As the code comment itself says: /* default type is active object type */
In weigth_paint mode the active object is the mesh.

The problem is that the `data->object_type` in this case is `OB_MESH` instead of `OB_ARMATURE`. As the code comment itself says: `/* default type is active object type */` In weigth_paint mode the active object is the mesh.

This issue was referenced by ce6e7a0941

This issue was referenced by ce6e7a094173c288e497e982c55b33f2135d83be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

Hesitantly re-opening this.

Although the operator is now there, and the bone selection changes, it doesn't seem to update the active vertex group to the one that corresponds to the newly active bone. This makes it almost useless in weight paint, since in the end I still have to re-select the already active bone manually, to see its weights.

Hesitantly re-opening this. Although the operator is now there, and the bone selection changes, it doesn't seem to update the active vertex group to the one that corresponds to the newly active bone. This makes it almost useless in weight paint, since in the end I still have to re-select the already active bone manually, to see its weights.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed eba4a4bd73

Since the issue didn't show up in this test file, you can always open a new report and reference this one.

Fixed eba4a4bd73 Since the issue didn't show up in this test file, you can always open a new report and reference this one.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60689
No description provided.